Modifide pom.xml added properties source 1.8

--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,9 @@
   <groupId>maven.programmming</groupId>
   <artifactId>maven-quick-start</artifactId>
   <version>2.19.1</version>
+
+  <properties> 
+   <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 </project>
