--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,21 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>maven.programmming</groupId>
   <artifactId>maven-quick-start</artifactId>
-  <version>2.19.1</version>
+  <version>3.10.1</version>
 
-  <properties> 
-   <maven.compiler.source>1.8</maven.compiler.source>
-   <maven.compiler.target>1.8</maven.compiler.target>
-</properties>
+    <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.10.1</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
